# app/Http/Controllers/RoomsController.php
@@ -7,7 +7,20 @@ use Illuminate\Http\Request;
 
 class RoomsController extends Controller
 {
-    public function index() {
+
+    /**
+     * @OA\get(
+     *      path="/api/rooms",
+     *      summary="Retrieve all rooms",
+     *      tags={"Rooms"},
+     *      @OA\Response(
+     *          response=200,
+     *          description="Success",
+     *      )
+     * ),
+     */
+    public function index()
+    {
         return Room::all();
     }
 }
